Minor changes on the intro

--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -3,15 +3,15 @@
 \label{sec:intro}
 
 The Non-Uniform Memory Access (NUMA) architecture is an appealing solution for the scalability of multi-core era. Compared to Uniform Memory Access (UMA) architecture, the NUMA architecture avoids the bottleneck of a central memory controller: each processor (also known as a domain or node) consists of multiple cores, while each node can access its own memory controller. Different nodes are connected via high-speed inter-connection (such as Quick Path Interconnect (QPI)~\cite{intelqpi} or HyperTransport bus~\cite{hypertransport}) to form a cache-coherent system that presents an abstraction of a single globally addressable memory. 
-However, NUMA applications may have serious performance issues, if programs have one of the following issues, such as large amount of remote accesses, load imbalance, contention for interconnection and last level cache~\cite{Blagodurov:2011:CNC:2002181.2002182, Dashti:2013:TMH:2451116.2451157}, as discussed more in Section~\ref{sec:overview}. 
+However, NUMA applications may have serious performance issues, if programs have one of the following issues, such as large amount of remote accesses, load imbalance, contention for interconnection, memory controller, and last level cache~\cite{Blagodurov:2011:CNC:2002181.2002182, Dashti:2013:TMH:2451116.2451157}, as discussed more in Section~\ref{sec:overview}. 
 
-Multiple types of approaches help improve the performance of NUMA systems. The first type of approaches migrates tasks or physical pages reactively based on memory access patterns or other hardware characteristics~\cite{Blagodurov:2011:CNC:2002181.2002182, AutoNUMA, Dashti:2013:TMH:2451116.2451157, Lepers:2015:TMP:2813767.2813788}. They improve the performance automatically without human involvement. However, these systems impose additional overhead (sometimes unnecessarily)  by migrating tasks or physical pages reactively. Further, the migration cannot reduce remote accesses if objects of the same page are concurrently accessed by multiple threads~\cite{Gaud:2014:LPM:2643634.2643659}. 
+Multiple types of approaches help improve the performance of NUMA systems. The first type of approaches migrates tasks or physical pages reactively based on memory access patterns or other hardware characteristics~\cite{Blagodurov:2011:CNC:2002181.2002182, AutoNUMA, Dashti:2013:TMH:2451116.2451157, Lepers:2015:TMP:2813767.2813788}. They improve the performance automatically without human involvement. However, these systems impose additional overhead (sometimes unnecessarily)  by migrating tasks or physical pages reactively. Further, the migration cannot reduce remote accesses if objects of the same page are concurrently accessed by  threads in multiple nodes~\cite{Gaud:2014:LPM:2643634.2643659}. 
 The second type of approaches relies on programmers to manage memory allocations and task assignments explicitly~\cite{Kaestle:2015:SSA:2813767.2813787, Lin:2016:MTP:2872362.2872401, Majo:2017:LPC:3057718.3040222}. Although they could improve the performance greatly, they typically require significant human effort to rewrite the programs, where legacy systems cannot benefit automatically. 
 
-Another type of approach focuses on heap management~\cite{tcmallocnew, kim2013node, yang2019jarena}. The NUMA-aware memory management is appealing, because there is no need to change applications explicitly. Also, they are belonging to proactive approaches that could avoid some remote accesses without task or page migration. Among them, Kaminski et al. designs the first NUNA-aware memory allocator~\cite{tcmallocnew}, called as TcMalloc-NUMA in the remainder of this paper, where the other two papers utilize a similar approach. TcMalloc-NUMA invokes the \texttt{mbind} system call to bind the memory explicitly to the node that a thread is running on. That is, it can guarantee that 
+Another type of approach focuses on heap management~\cite{tcmallocnew, kim2013node, yang2019jarena}. The NUMA-aware memory management is appealing, because there is no need to change applications explicitly. Also, they are belonging to proactive approaches that could reduce remote accesses without task or page migration. Among them, Kaminski et al. designs the first NUNA-aware memory allocator~\cite{tcmallocnew}, called as TcMalloc-NUMA in the remainder of this paper, where the other two papers utilize a similar approach. TcMalloc-NUMA invokes the \texttt{mbind} system call to bind the memory explicitly to the node that a thread is running on, and guarantees local allocation initially.  
 %Due to the explicit binding, it is able to check the locality of a memory block inside the user space, and then return a freed object back to the corresponding node based on the locality. TcMalloc-NUMA achieves some performance speedup for some synthetic applications. 
 
-However, TcMalloc-NUMA has multiple design issues. First, it always allocates the memory from the node that the thread is currently running on. But it may cause significant performance issue if a thread is migrating to a new node, since a thread is forced to access its remote stack, and will lose the locality of cache lines. Further, this design is not tapped with the OS scheduler. As observed by previous study~\cite{Grace}, the OS scheduler typically assigns newly-created threads into the same processor as the parent thread in order to exploit cache locality. However, all pages allocated in the original node will be remote accesses, if a thread is dispatched to a remote node afterwards.  Second, it does not consider the load balance issue. As observed by existing NUMA profilers, many performance issues are related to shared objects that are allocated in the main thread but accessed concurrently by multiple children threads~\cite{XULIU, MemProf}. TcMalloc-NUMA will allocate such objects from the node that the main thread is running on, causing the load imbalance issue. Third, it does not employ the recent progress of the hardware and OS support, such as huge page support. Fourth, its memory management cannot ensure the locality, if an object is deallocated by a thread that is different from the allocating thread. Fur such objects, \TN{} will simply place them into the local cache of the current thread. But this will generate unnecessary remote accesses, if the deallocation thread is located in a different node from its allocation thread.  
+However, TcMalloc-NUMA has load imbalance issue and locality issue as follows. First, it always allocates the memory from the node that the thread is currently running on. But it may cause significant performance issue if a thread is migrating to a new node, since a thread is forced to access its remote stack, and will lose the locality of cache lines. Further, this design is not tapped with the OS scheduler. As observed by previous study~\cite{Grace}, the OS scheduler typically assigns newly-created threads into the same processor as the parent thread in order to exploit cache locality. However, all pages allocated in the original node will be remote accesses, if a thread is dispatched to a remote node afterwards.  Second, it does not consider the load balance issue.  All objects that allocated in the main thread but accessed concurrently by multiple children threads will be located in the same node, causing the load imbalance issue. Third, it does not employ the recent progress of the hardware and OS support, such as huge page support. Fourth, its memory management cannot ensure the locality, if an object is deallocated by a thread that is different from the allocating thread. For such objects, \TN{} will simply place them into the local cache of the current thread, generating unnecessary remote accesses.  
 
 
 \begin{comment}
@@ -32,12 +32,12 @@ In the end, it utilizes the mbind to bind the memory to a node specifically.
 
 This paper proposes a novel NUMA-aware memory allocator -- \NM{} -- to address these  issues. \NM{} improves both load balance and locality with the following designs.  
 
-First, \NM{} proposes a \textbf{binding-based memory management policy} that ensures both load balance and locality. For load balance, \NM{} binds threads to different NUMA nodes in an interleaved way. That is, a newly -created thread will be always bound to a different node from its predecessor. Because of this binding policy, every node will have a similar number of threads, ensuring load balance between different memory controller. Also, a thread will not be migrated to a different node due to the binding, avoiding the performance loss caused by cross-node thread migration. For the locality, \NM{} reserves a range of virtual memory for each node, where all physical pages can be only allocated from this node (specified via \texttt{mbind} system call). For each thread, an allocation can be only satisfied from its per-node heap, or from a per-thread cache that always tracked freed objects originated from the same node. More specifically, \NM{} checks the node locality of an object upon deallocations, and only places an object into its per-thread cache if it is originated from the same node, which is different from \TN{}. Otherwise, the object will be returned to its original node. \NM{} also reduces locality issues by always allocating the metadata from the local node.  
+First, \NM{} proposes a \textbf{binding-based memory management policy} that ensures both load balance and locality. For load balance, \NM{} binds threads to different NUMA nodes in an interleaved way. That is, a newly -created thread will be always bound to a different node from its predecessor. Because of this binding policy, every node will have a similar number of threads, ensuring load balance between different memory controllers. Due to the binding, a thread will not be migrated to a different node, avoiding the performance loss caused by cross-node thread migration. For the locality, \NM{} reserves a range of virtual memory for each node, where all physical pages can be only allocated from this node (specified via \texttt{mbind} system call). For each thread, allocations can be only satisfied from its per-node heap, or from a per-thread cache that always tracked freed objects originated from the same node. More specifically, \NM{} checks the node locality of an object upon the deallocation, and only places an object into its per-thread cache if it is originated from the same node. Otherwise, the object will be returned to its original node. This is different from \TN{}. \NM{} also reduces locality issues by always allocating the metadata from the local node.  
 
 
 % task management altogether, by binding tasks to different NUMA nodes interleavedly and binding the memory explicitly. The task binding not only benefits the load balance, due to its even distribution of tasks, but also constructs the basis for its memory management. In this design, there is no need to query the locality of tasks dynamically, and it is guaranteed to have the correct locality for the memory. 
   
-Second, \NM{} further proposes \textbf{an interleaved heap} to reduce the load imbalance issue. More specifically, \NM{} reserves a range of virtual memory that physical pages will be allocated interleavedly across all physical nodes. That is,  physical pages from the interleaved heap will be evenly allocated from all nodes, avoiding the congestion of one memory controller~\cite{Blagodurov:2011:CNC:2002181.2002182}. However, a naive method of allocating all objects from the interleaved heap may actually cause unnecessary remote accesses. For instance, a private object should be always allocated in the local node, instead of from the interleaved heap (possibly from a remote node). \NM{} only allocates potentially-shared objects from the interleaved heap, and proposes a heuristics method to determine shared objects, as described in Section~\ref{sec:mainthread}.  
+Second, \NM{} further proposes \textbf{an interleaved heap} to reduce the load imbalance issue. More specifically, \NM{} reserves a range of virtual memory that physical pages will be allocated interleavedly across all physical nodes. That is, physical pages from the interleaved heap will be evenly allocated from all nodes, avoiding the congestion of one memory controller~\cite{Blagodurov:2011:CNC:2002181.2002182}. However, a naive method of allocating all objects from the interleaved heap may actually cause unnecessary remote accesses. For instance, private objects should be always allocated in the local node, instead of from the interleaved heap. \NM{} only allocates potentially-shared objects from the interleaved heap, and proposes a heuristics method to determine such objects, as described in Section~\ref{sec:mainthread}.  
 
  Third, \NM{} proposes new huge page support, by employing the recent progress of the hardware and the OS. Note that this is different from the default support of transparent huge page. As observed by existing study~\cite{Gaud:2014:LPM:2643634.2643659, DBLP:conf/asplos/PanwarBG19}, the transparent huge page mechanism has a harmful impact on the performance for the NUMA architecture, due to memory waste and page-level false sharing. Differently, \NM{} only utilizes huge pages for big objects and small objects that are allocated extensively. \NM{}'s huge page support minimizes both memory waste and page-level false sharing. Based on our evaluation, \NM{}'s huge page support is always benefiting the performance (Section~\ref{sec:hugepage}). 
  
@@ -55,12 +55,12 @@ Overall, this paper has the following contributions.
 \begin{itemize}
 \item \NM{} proposes a binding-based memory management that integrates task management with memory management together. This design ensures both load balance and locality.  
 \item \NM{} proposes an interleaved heap in order to reduce load imbalance issue caused by shared objects. 
-\item \NM{} proposes new huge page support that  minimizes memory waste and avoids page-level false sharing, which always benefiting the performance. 
-\item \NM{} includes multiple careful designs to reduce the performance and memory overhead. 
+\item \NM{} proposes new huge page support that  minimizes memory waste and avoids page-level false sharing, which always benefits the performance. 
+\item \NM{} includes multiple careful designs to reduce the performance and memory overhead, such as fast metadata lookup, efficient objects migration. 
 \item The extensive experiments confirm that \NM{} has a better performance and scalability than even widely-used industrial allocators. 
 \end{itemize}
 
-The remainder of this paper is organized as follows. Section~\ref{sec:overview} introduces some background, such as the NUMA architecture and the OS support. Section~\ref{sec:implement} focuses on the design and implementation of \NM{}. After that, Section~\ref{sec:evaluation} describes its experimentation evaluation, and Section~\ref{sec:limit} discusses the limitation of \NM{}. In the end, Section\ref{sec:related} discusses some relevant related work, and then Section~\ref{sec:conclusion} concludes. 
+The remainder of this paper is organized as follows. Section~\ref{sec:overview} introduces the NUMA architecture and the corresponding OS support. Section~\ref{sec:implement} focuses on the design and implementation of \NM{}. After that, Section~\ref{sec:evaluation} describes its experimentation evaluation, and Section~\ref{sec:limit} discusses the limitation of \NM{}. In the end, Section\ref{sec:related} discusses some relevant related work, and then Section~\ref{sec:conclusion} concludes. 
 
 \begin{comment}
 
